# kyber-ntt-simd-optimization

./: Cargo.toml  ntt_cache.sh  simd_cache.sh
benches/: llvm_bench.rs  ntt_bench.rs  simd_ops_bench.rs
src/: lib.rs  llvm_demo.rs  modular.rs  params.rs  simd_ops.rs  simd_ops_opt.rs
src/ntt/: basic_ntt.rs  mod.rs  simd_ntt.rs  simd_ntt_opt.rs  traits.rs
